[package]
name = "raylib-sys"
version = "0.9.1"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
repository = "https://github.com/deltaphc/raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2018"

[build-dependencies]
cmake = "0.1.35"
curl = "0.4.19"
flate2 = "1.0.6"
pkg-config = "0.3.14"
tar = "0.4.20"
url = "1.7.2"